--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 
-  <HEAD>
+  <head>
     <title>Todo App</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
-  </HEAD>
+  </head>
 
   <body>
     <div class="aaa">
@@ -46,5 +46,5 @@
     </div>
     <script type="text/javascript" SRC="app.js"></script>
   </body>
-  
+
 </html>
