--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
 
   <body>
-    <div class="aaa">
+    <div class="app-header">
       <img src="./eisenhower-matrix.jpg">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <div class="app-content">
+      <p id="add-task">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text">
