--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
   </head>
 
   <body>
-    <div class="app-header">
+    <header>
       <img src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="app-content">
-      <p id="add-task">
-        <label for="new-task">Add Item</label>
+    </header>
+    <main>
+        <h3>Add Item</h3>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
-      </p>
       <h3>Todo</h3>
       <ul id="incomplete-tasks">
         <li>
@@ -43,7 +41,7 @@
           <button class="delete"><img src="./remove.svg"></button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 
