--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="completed-tasks" class="completed">
         <li>
           <input type="checkbox" checked><label class="task">See the Doctor</label>
           <input type="text" class="task">
